<?xml version="1.0"?>
<package>
  <name>fotonic_wrapper</name>
  <version>0.1.0</version>
  <description>fotonic_wrapper is a ROS wrapper for the <a href="http://www.fotonic.com/product/fotonic-e-serie-16w/#tab-downloads"></a>
    for interfacing with the FOTONIC camera. 
  </description>
<maintainer email="fanbu@umich.edu">ROAHM LABS</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>fz_api</build_depend>
  <build_depend>fz_commands</build_depend>
  <build_depend>fz_types</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>



  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>fz_api</run_depend>
  <run_depend>fz_commands</run_depend>
  <run_depend>fz_types</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  
  <export>
  </export>
</package>
